# Cookbook

./: .dockerignore  .env.example  .gitignore  .mcp.json.example  AGENTS.md  ARCHITECTURE.md  config.yaml  pyproject.toml
.github/workflows/: build-backend.yml  dox.yml
.streamlit/: config.toml
app/: AGENTS.md
app/CookbookApp/: AGENTS.md  Info-iOS.plist  Info-macOS.plist  project.yml
app/CookbookApp/Sources/: CookbookApp.swift
app/CookbookKit/: Package.swift
data/seed/: food_aliases.csv  ingredient_aliases.csv  substitutions.csv
deploy/: AGENTS.md  Dockerfile  OLARES_MARKET_HANDOFF.md  README.md  entrypoint.sh
deploy/cookbook/: Chart.yaml  OlaresManifest.yaml  cookbook.yaml  values.yaml
deploy/cookbook/templates/: cookbook.yaml
docs/: MCP_SERVER.md  design-recipes-compose.md  handoff-assistant-add-and-deletes.md  ui-proposal.md
docs/architecture/: README.md  cookbook-dataflow.excalidraw  cookbook-dataflow.mmd
research/: nutrition-data-sources.md
scripts/: dox_check.py  ingest_book.py  ingest_corpus.py  setup_nltk.py
scripts/hooks/: pre-commit
src/cookbook_kb/: AGENTS.md  agent.py  config.py  tools.py
src/cookbook_kb/api/: AGENTS.md  __init__.py  app.py  deps.py  jobs.py  models.py  worker.py
src/cookbook_kb/extract/: boundaries.py  extractor.py  schema.py
src/cookbook_kb/functions/: AGENTS.md  __init__.py  planner.py  recipes.py  substitutions.py
src/cookbook_kb/harness/: AGENTS.md  __init__.py  state.py  tools.py
src/cookbook_kb/ingest/: detect.py  loader.py  ocr.py  pdf_text.py  pipeline.py  url.py
src/cookbook_kb/llm/: AGENTS.md  client.py  provider.py
src/cookbook_kb/mcp_server/: __init__.py  server.py
src/cookbook_kb/normalize/: canonical.py  dedup.py  dietary_rules.py  foods.py  ingredients.py  pipeline.py  tagging.py  units.py
src/cookbook_kb/ui/: app.py  (+2 more)
tests/: test_api_smoke.py  test_assistant_edit_tools.py  test_compose_endpoints.py  test_delete_endpoints.py  test_ingest_jobs.py
(+93 files in other folders)
